Fix: Another attempt to prevent vertical scrolling on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -79,3 +79,9 @@
         height: 20px; /* Even smaller squares */
     }
 }
+
+/* Apply a max-width to the body element */
+body {
+  max-height: 100%;
+  overflow-y: hidden;
+}
